# genai-knowledge-assistant

./: .env.example  .gitignore  AZURE_APP_SERVICE.md  LICENSE  README.md  pyproject.toml  requirements.txt  startup.sh  streamlit_app.py
app/: __init__.py  cli.py  config.py  documents.py  embeddings.py  evaluation.py  models.py  prompting.py  rag.py  validation.py  vector_store.py
data/: evaluation_examples.json
data/sample_docs/: expense_policy.md  remote_work_policy.md  security_policy.md
tests/: test_config.py  test_evaluation.py  test_rag.py  test_validation.py
